Scrollbar fixed

--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -35,7 +35,7 @@
   outline: none;
 }
 body {
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 html,
 body,
